events page and content overlap issue fix

--- a/docs/src/assets/styles/index.scss
+++ b/docs/src/assets/styles/index.scss
@@ -140,7 +140,7 @@ button {
     line-height: $line-height-doc;
     text-align: center;
     min-width: $tag-width;
-    margin: 2px;
+    margin-left: 2px;
     padding: $tag-padding;
     color: var(--primary-color);
     border: solid 1px;
@@ -258,7 +258,7 @@ button {
     border-bottom: 1px solid var(--border-color);
     display: block;
     width: 100%;
-    margin: 0 auto;
+    margin: 5px auto;
 }
 
 .boxBody {
